# ROS_Course

./: .gitignore
00_Software/src/conversions/: CMakeLists.txt  package.xml
00_Software/src/conversions/config/: param.yaml
00_Software/src/conversions/launch/: conversions.launch.py
00_Software/src/conversions/scripts/: conversions_node.py
00_Software/src/conversions/src/: conversions.cpp
00_Software/src/hybrid_pkg/: CMakeLists.txt  package.xml
00_Software/src/hybrid_pkg/scripts/: py_subscriber.py
00_Software/src/hybrid_pkg/src/: cpp_publisher.cpp
00_Software/src/my_python_pkg/: package.xml  setup.py
00_Software/src/my_python_pkg/launch/: hello.launch.py
00_Software/src/my_python_pkg/my_python_pkg/: hello_node.py
00_Software/src/param_package/: CMakeLists.txt  package.xml
00_Software/src/param_package/config/: my_params.yaml
00_Software/src/param_package/launch/: param_inline.launch.py  param_yaml.launch.py
00_Software/src/param_package/src/: robot_speed.cpp
00_Software/src/service_examples/: CMakeLists.txt  package.xml
00_Software/src/service_examples/src/: add_two_ints_client.cpp  add_two_ints_server.cpp
00_Software/src/topic_examples/src/: publisher_node.cpp  subscriber_node.cpp
00_Software/src/transform_examples/: CMakeLists.txt  README_STATIC_TRANSFORMS.md  package.xml
00_Software/src/transform_examples/config/: static_transforms.yaml
00_Software/src/transform_examples/launch/: static_transforms.launch.py
00_Software/src/transform_examples/src/: static_broadcaster.cpp
01_Session_Fundamentals/: presentation.md
01_Session_Fundamentals/src/hello_ros2/: CMakeLists.txt  package.xml
01_Session_Fundamentals/src/hello_ros2/src/: hello_node.cpp
02_Session_Core_Concepts_1/: presentation.md
02_Session_Core_Concepts_1/src/topic_examples/: CMakeLists.txt  package.xml
03_Lab_Core_Concepts_1/: Lab_01.md
04_Session_Core_Concepts_2/: presentation.md
05_Lab_Core_Concepts_2/: lab_02.md
06_Session_Transforms_KF_QOS_Rviz/: conversions.py  euler_quaternion_3d_demo.html  presentation.md
07_Mini_Project/: mini_project.md
